--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,11 +6,11 @@ on:
       - master
 
 jobs:
-  build:
+  build_9_0_1:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@master
 
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
@@ -18,9 +18,54 @@ jobs:
         BUILD_DATE: $(date -u +"%Y-%m-%dT%H:%M:%SZ")
         VCS_URL: $(git config --get remote.origin.url)
         VCS_REF: $(git rev-parse --short HEAD)
+        LLVM_VERSION: 9.0.1
       with:
         name: leavesask/llvm
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        buildargs: BUILD_DATE,VCS_URL,VCS_REF
+        buildargs: LLVM_VERSION,BUILD_DATE,VCS_URL,VCS_REF
         buildoptions: "--compress"
+        tags: "latest,9.0.1"
+
+  build_7_1_0:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@master
+
+    - name: Publish to Registry
+      uses: elgohr/Publish-Docker-Github-Action@master
+      env:
+        BUILD_DATE: $(date -u +"%Y-%m-%dT%H:%M:%SZ")
+        VCS_URL: $(git config --get remote.origin.url)
+        VCS_REF: $(git rev-parse --short HEAD)
+        LLVM_VERSION: 7.1.0
+      with:
+        name: leavesask/llvm
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        buildargs: LLVM_VERSION,BUILD_DATE,VCS_URL,VCS_REF
+        buildoptions: "--compress"
+        tags: "7.1.0"
+
+  build_5_0_2:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@master
+
+    - name: Publish to Registry
+      uses: elgohr/Publish-Docker-Github-Action@master
+      env:
+        BUILD_DATE: $(date -u +"%Y-%m-%dT%H:%M:%SZ")
+        VCS_URL: $(git config --get remote.origin.url)
+        VCS_REF: $(git rev-parse --short HEAD)
+        GCC_VERSION: 7.3.0
+        LLVM_VERSION: 5.0.2
+      with:
+        name: leavesask/llvm
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        buildargs: GCC_VERSION,LLVM_VERSION,BUILD_DATE,VCS_URL,VCS_REF
+        buildoptions: "--compress"
+        tags: "5.0.2"
